Добавлены примеры проявления критериев

--- a/developers.html
+++ b/developers.html
@@ -74,9 +74,9 @@
                             <h5>{{ question.number }}/{{ questionsCount }}. {{ question.subject }}<span
                                     v-if="question.isKeyQuestion">*</span></h5>
                         </blockquote>
-                        <figcaption class="blockquote-footer" v-show="question.description">
-                            {{ question.description }}
+                        <figcaption class="blockquote-footer" v-show="question.description" v-html="question.description">
                         </figcaption>
+                        <small v-if="question.examples"><div class="card card-body" v-html="question.examples"></div></small>
                     </figure>
                     <div class="ml-md-3 ml-sm-3 pl-md-5 pt-sm-0 pt-3 options-container">
                         <div class="form-check py-1" v-for="choice in question.choices" v-bind:id="choice.value">
@@ -111,7 +111,7 @@
     </div>
 
     <footer class="pt-3 mt-4 text-muted border-top">
-        SkyEng &copy; 2021
+        SkyEng &copy; 2022
     </footer>
 </div>
 
@@ -124,8 +124,8 @@
                 {
                     id: 1,
                     subject: "Какой контроль нужен за сотрудником?",
-                    description: "Самостоятельно и с соблюдением сроков обеспечивает весь жизненный цикл задачи (с момента, как бизнес принес сформулированную проблему до релиза). \n В Skyeng в жизненный цикл задачи входят этапы: тех. ревью (груминг), оценка трудозатрат, разработка, тестирование, выкладка, верификация и сбора метрик.",
-                    examples: "Пример: бизнес говорит, что конверсия в заявку на обучение просела, и предлагает перенести форму из футера в хэдер страницы. Разработчик проводит тех. ревью, оценивает задачу, берет в разработку, реализовывает, проходит code review, тестирование, выкладывает задачу в прод, убеждается, что все работает как нужно, и вместе с продактом может посмотреть метрики. Чем выше уровень самоходности, тем меньше требуется привлекать руководителя для прохождения всего цикла.",
+                    description: "Самостоятельно и с соблюдением сроков обеспечивает весь жизненный цикл задачи (с момента, как бизнес принес сформулированную проблему до релиза). <br/> В Skyeng в жизненный цикл задачи входят этапы: тех. ревью (груминг), оценка трудозатрат, разработка, тестирование, выкладка, верификация и сбора метрик.",
+                    examples: "<b>Пример:</b> бизнес говорит, что конверсия в заявку на обучение просела, и предлагает перенести форму из футера в хэдер страницы. Разработчик проводит тех. ревью, оценивает задачу, берет в разработку, реализовывает, проходит code review, тестирование, выкладывает задачу в прод, убеждается, что все работает как нужно, и вместе с продактом может посмотреть метрики. Чем выше уровень самоходности, тем меньше требуется привлекать руководителя для прохождения всего цикла.",
                     choices: [
                         {
                             choice: "Требуется регулярная помощь и контроль",
@@ -156,7 +156,7 @@
                     id: 2,
                     subject: "Умение действовать в условиях неопределенности",
                     description: "При возникновении неопределенности в задаче (касательно требований, реализации, связей, тестирования, аналитики и т.д.) самостоятельно может эту неопределенность устранить.",
-                    examples: "Пример 1: при реализации задачи сотрудник обнаруживает отсутствующие макеты для верстки. Разработчик без привлечения руководителя договаривается с продактом/дизайнером о том, что делать с этими страницами.\n\n\nПример 2: при реализации задачи сотрудник обнаруживает, что не хватает api-методов у сервиса соседней команды, к которому должны пойти обращения. Разработчик идет и договаривается с соседней командой о том, что недостающий метод появится в ближайшее время (может договориться, что сделает сам, а команда поревьювит, а может договориться о том, что метод будет реализован в ближайшее время)",
+                    examples: "<b>Пример 1:</b> при реализации задачи сотрудник обнаруживает отсутствующие макеты для верстки. Разработчик без привлечения руководителя договаривается с продактом/дизайнером о том, что делать с этими страницами.<br/><br/><b>Пример 2:</b> при реализации задачи сотрудник обнаруживает, что не хватает api-методов у сервиса соседней команды, к которому должны пойти обращения. Разработчик идет и договаривается с соседней командой о том, что недостающий метод появится в ближайшее время (может договориться, что сделает сам, а команда поревьювит, а может договориться о том, что метод будет реализован в ближайшее время)",
                     choices: [
                         {
                             choice: "Запрашивает помощь руководителя и коллег в условиях неопределенности, задает вопросы",
@@ -187,7 +187,7 @@
                     id: 3,
                     subject: "Понимание проблемы",
                     description: "Сотрудник в любой задаче понимает причину её появления. Знает, на что решение задачи влияет в рамках бизнеса, и предлагает улучшения по её решению, опираясь на технический опыт.",
-                    examples: "Пример: Исходя из своей насмотренности, разработчик может предложить открывать автоматически модальное окно с предложением вместо перекраски кнопки регистрации в красный цвет, чтобы повысить конверсию в регистрацию.",
+                    examples: "<b>Пример:</b> Исходя из своей насмотренности, разработчик может предложить открывать автоматически модальное окно с предложением вместо перекраски кнопки регистрации в красный цвет, чтобы повысить конверсию в регистрацию.",
                     choices: [
                         {
                             choice: "Требуется объяснение бизнес-ценности задачи, которая выполняется",
@@ -218,7 +218,7 @@
                     id: 4,
                     subject: "Аргументация и конфронтация",
                     description: "Уверенно может объяснить, почему это решение сейчас не стоит делать, подкрепляя свои рассуждения фактами и опытом (как своим, так и чужим).",
-                    examples: "Пример: разработчик подсвечивает бизнесу, что реализация задачи займет значимо больше времени, чем потенциально принесет пользы, или что задачу сейчас лучше решить с помощью готового механизма",
+                    examples: "<b>Пример:</b> разработчик подсвечивает бизнесу, что реализация задачи займет значимо больше времени, чем потенциально принесет пользы, или что задачу сейчас лучше решить с помощью готового механизма",
                     choices: [
                         {
                             choice: "Выполняет задачи, не вступая в обсуждения их целей ",
@@ -249,7 +249,7 @@
                     id: 5,
                     subject: "Стратегическое мышление",
                     description: "Сотрудник решает бизнес-задачи на основе анализа данных  с учетом минимизации затрат и для достижения наилучшего результата для компании в будущем. ",
-                    examples: "Пример:  Задача - реализовать и разместить чат на странице сайта. Сотрудник со стратегическим мышлением рассмотрит масштабирование и переиспользование чата и изначально спланирует его разработку с небольшим увеличением трудозатрат (которые приведут к большой экономии ресурсов в будущем).",
+                    examples: "<b>Пример:</b>  Задача - реализовать и разместить чат на странице сайта. Сотрудник со стратегическим мышлением рассмотрит масштабирование и переиспользование чата и изначально спланирует его разработку с небольшим увеличением трудозатрат (которые приведут к большой экономии ресурсов в будущем).",
                     choices: [
                         {
                             choice: "Набирается опыта в проектировании решений",
@@ -280,7 +280,7 @@
                     id: 6,
                     subject: "Межкомандная работа",
                     description: "Сотрудник самостоятельно взаимодействует с разными командами, вовлекая их в работу, для достижений целей проекта",
-                    examples: "Пример: Сотрудник при разработке чата для главной страницы сайта лично контактирует с командой дизайнеров и аналитиков, договаривается о постановке задач и контролирует их выполнение",
+                    examples: "<b>Пример:</b> Сотрудник при разработке чата для главной страницы сайта лично контактирует с командой дизайнеров и аналитиков, договаривается о постановке задач и контролирует их выполнение",
                     choices: [
                         {
                             choice: "Работает в рамках своей команды",
@@ -311,7 +311,7 @@
                     id: 7,
                     subject: "Ответственность за ошибки",
                     description: "Ответственность и инициативность сотрудника в случае возникновения проблем",
-                    examples: "Пример: при возникновении ошибок в проде разработчик проактивно начинает разбираться с ними, прилагая необходимые усилия для устранения проблем. После устранения проблемы проводится ретроспектива и вырабатывается решение, которое позволит не допускать подобных проблем в будущем",
+                    examples: "<b>Пример:</b> при возникновении ошибок в проде разработчик проактивно начинает разбираться с ними, прилагая необходимые усилия для устранения проблем. После устранения проблемы проводится ретроспектива и вырабатывается решение, которое позволит не допускать подобных проблем в будущем",
                     choices: [
                         {
                             choice: "В случае критичных ошибок в работе сервиса обращается за помощью к коллегам/руководителю",
@@ -372,8 +372,8 @@
                 {
                     id: 9,
                     subject: "Кол-во возвратов на доработку задачи после тестирования из-за ошибок реализации",
-                    description: "Разработчик обязательно проверяет задачу до передачи в тестирование. Это снижает нагрузку на тестировщиков, а также ускоряет скорость поставки задачи (возврат в переработку, как правило, влечет за собой увеличение времени поставки).\nСтоит отметить, что могут быть \"технические возвраты\" задач, например из-за того, что у тестировщика проблемы с инфраструктурой - такие возвраты мы не считаем.",
-                    examples: "Пример: Тестировщики редко возвращают задачи разработчику из-за наличия багов. Им сразу понятно, как тестировать задачу и на что она влияет",
+                    description: "Разработчик обязательно проверяет задачу до передачи в тестирование. Это снижает нагрузку на тестировщиков, а также ускоряет скорость поставки задачи (возврат в переработку, как правило, влечет за собой увеличение времени поставки).<br/>Стоит отметить, что могут быть \"технические возвраты\" задач, например из-за того, что у тестировщика проблемы с инфраструктурой - такие возвраты мы не считаем.",
+                    examples: "<b>Пример:</b> Тестировщики редко возвращают задачи разработчику из-за наличия багов. Им сразу понятно, как тестировать задачу и на что она влияет",
                     choices: [
                         {
                             choice: "Допускает ошибки не более, чем в 50% задач",
@@ -403,7 +403,7 @@
                 {
                     id: 10,
                     subject: "Архитектура сервисов",
-                    description: "На старте нового проекта разработчик закладывает архитектуру, которая долгое время позволяет гибко реагировать на запросы бизнеса.\nПри поддержке существующего проекта происходит постепенное улучшение архитектуры через обычные задачи.",
+                    description: "На старте нового проекта разработчик закладывает архитектуру, которая долгое время позволяет гибко реагировать на запросы бизнеса.<br/>При поддержке существующего проекта происходит постепенное улучшение архитектуры через обычные задачи.",
                     examples: "",
                     choices: [
                         {
@@ -434,8 +434,8 @@
                 {
                     id: 11,
                     subject: "Контроль работоспособности сервиса",
-                    description: "Разработчик эффективно выстраивает систему контроля работоспособности продуктов, которые разрабатываются.\nМожет без посещения сервиса ответить на вопрос \"функционирует ли он сейчас?\"",
-                    examples: "Пример: разработчик настраивает алертинг для технических и продуктовых метрик, которые сообщат ему о том, что что-то идет не так",
+                    description: "Разработчик эффективно выстраивает систему контроля работоспособности продуктов, которые разрабатываются.<br/>Может без посещения сервиса ответить на вопрос \"функционирует ли он сейчас?\"",
+                    examples: "<b>Пример:</b> разработчик настраивает алертинг для технических и продуктовых метрик, которые сообщат ему о том, что что-то идет не так",
                     choices: [
                         {
                             choice: "Проверяет работоспособность сервиса вручную",
