Обновлены грейды разработки

--- a/developers.html
+++ b/developers.html
@@ -124,8 +124,8 @@
                 {
                     id: 1,
                     subject: "Какой контроль нужен за сотрудником?",
-                    description: "Самостоятельно и с соблюдением сроков обеспечивает весь жизненный цикл задачи (с момента, как бизнес принес сформулированную проблему до релиза). <br/> В Skyeng в жизненный цикл задачи входят этапы: тех. ревью (груминг), оценка трудозатрат, разработка, тестирование, выкладка, верификация и сбора метрик.",
-                    examples: "<b>Пример:</b> бизнес говорит, что конверсия в заявку на обучение просела, и предлагает перенести форму из футера в хэдер страницы. Разработчик проводит тех. ревью, оценивает задачу, берет в разработку, реализовывает, проходит code review, тестирование, выкладывает задачу в прод, убеждается, что все работает как нужно, и вместе с продактом может посмотреть метрики. Чем выше уровень самоходности, тем меньше требуется привлекать руководителя для прохождения всего цикла.",
+                    description: "Самостоятельно и с соблюдением сроков обеспечивает весь жизненный цикл задачи (с момента, как бизнес принес сформулированную проблему до релиза). <br/> В Skyeng в жизненный цикл задачи входят этапы: тех. ревью (груминг), оценка трудозатрат, разработка, тестирование, выкладка, верификация и сбора метрик",
+                    examples: "<b>Пример:</b> бизнес говорит, что конверсия в заявку на обучение просела, и предлагает перенести форму из футера в хэдер страницы. Разработчик проводит тех. ревью, оценивает задачу, берет в разработку, реализовывает, проходит code review, тестирование, выкладывает задачу в прод, убеждается, что все работает как нужно, и вместе с продактом может посмотреть метрики. Чем выше уровень самоходности, тем меньше требуется привлекать руководителя для прохождения всего цикла",
                     choices: [
                         {
                             choice: "Требуется регулярная помощь и контроль",
@@ -139,7 +139,7 @@
                         },
                         {
                             choice: "Самоходная единица",
-                            description: "Контроль не требуется, консультации возможны. Самостоятельно берет задачу, планирует и делает в адекватные, ожидаемые сроки. ",
+                            description: "Контроль не требуется, консультации возможны. Самостоятельно берет задачу, планирует и делает в адекватные, ожидаемые сроки",
                             value: 3
                         },
                         {
@@ -155,7 +155,7 @@
                 {
                     id: 2,
                     subject: "Умение действовать в условиях неопределенности",
-                    description: "При возникновении неопределенности в задаче (касательно требований, реализации, связей, тестирования, аналитики и т.д.) самостоятельно может эту неопределенность устранить.",
+                    description: "При возникновении неопределенности в задаче (касательно требований, реализации, связей, тестирования, аналитики и т.д.) самостоятельно может эту неопределенность устранить",
                     examples: "<b>Пример 1:</b> при реализации задачи сотрудник обнаруживает отсутствующие макеты для верстки. Разработчик без привлечения руководителя договаривается с продактом/дизайнером о том, что делать с этими страницами.<br/><br/><b>Пример 2:</b> при реализации задачи сотрудник обнаруживает, что не хватает api-методов у сервиса соседней команды, к которому должны пойти обращения. Разработчик идет и договаривается с соседней командой о том, что недостающий метод появится в ближайшее время (может договориться, что сделает сам, а команда поревьювит, а может договориться о том, что метод будет реализован в ближайшее время)",
                     choices: [
                         {
@@ -186,8 +186,8 @@
                 {
                     id: 3,
                     subject: "Понимание проблемы",
-                    description: "Сотрудник в любой задаче понимает причину её появления. Знает, на что решение задачи влияет в рамках бизнеса, и предлагает улучшения по её решению, опираясь на технический опыт.",
-                    examples: "<b>Пример:</b> Исходя из своей насмотренности, разработчик может предложить открывать автоматически модальное окно с предложением вместо перекраски кнопки регистрации в красный цвет, чтобы повысить конверсию в регистрацию.",
+                    description: "Сотрудник в любой задаче понимает причину её появления. Знает, на что решение задачи влияет в рамках бизнеса, и предлагает улучшения по её решению, опираясь на технический опыт",
+                    examples: "<b>Пример:</b> Исходя из своей насмотренности, разработчик может предложить открывать автоматически модальное окно с предложением вместо перекраски кнопки регистрации в красный цвет, чтобы повысить конверсию в регистрацию",
                     choices: [
                         {
                             choice: "Требуется объяснение бизнес-ценности задачи, которая выполняется",
@@ -217,7 +217,7 @@
                 {
                     id: 4,
                     subject: "Аргументация и конфронтация",
-                    description: "Уверенно может объяснить, почему это решение сейчас не стоит делать, подкрепляя свои рассуждения фактами и опытом (как своим, так и чужим).",
+                    description: "Уверенно может объяснить, почему это решение сейчас не стоит делать, подкрепляя свои рассуждения фактами и опытом (как своим, так и чужим)",
                     examples: "<b>Пример:</b> разработчик подсвечивает бизнесу, что реализация задачи займет значимо больше времени, чем потенциально принесет пользы, или что задачу сейчас лучше решить с помощью готового механизма",
                     choices: [
                         {
@@ -248,8 +248,8 @@
                 {
                     id: 5,
                     subject: "Стратегическое мышление",
-                    description: "Сотрудник решает бизнес-задачи на основе анализа данных  с учетом минимизации затрат и для достижения наилучшего результата для компании в будущем. ",
-                    examples: "<b>Пример:</b>  Задача - реализовать и разместить чат на странице сайта. Сотрудник со стратегическим мышлением рассмотрит масштабирование и переиспользование чата и изначально спланирует его разработку с небольшим увеличением трудозатрат (которые приведут к большой экономии ресурсов в будущем).",
+                    description: "Сотрудник решает бизнес-задачи на основе анализа данных  с учетом минимизации затрат и для достижения наилучшего результата для компании в будущем",
+                    examples: "<b>Пример:</b>  Задача - реализовать и разместить чат на странице сайта. Сотрудник со стратегическим мышлением рассмотрит масштабирование и переиспользование чата и изначально спланирует его разработку с небольшим увеличением трудозатрат (которые приведут к большой экономии ресурсов в будущем)",
                     choices: [
                         {
                             choice: "Набирается опыта в проектировании решений",
@@ -372,7 +372,7 @@
                 {
                     id: 9,
                     subject: "Кол-во возвратов на доработку задачи после тестирования из-за ошибок реализации",
-                    description: "Разработчик обязательно проверяет задачу до передачи в тестирование. Это снижает нагрузку на тестировщиков, а также ускоряет скорость поставки задачи (возврат в переработку, как правило, влечет за собой увеличение времени поставки).<br/>Стоит отметить, что могут быть \"технические возвраты\" задач, например из-за того, что у тестировщика проблемы с инфраструктурой - такие возвраты мы не считаем.",
+                    description: "Разработчик обязательно проверяет задачу до передачи в тестирование. Это снижает нагрузку на тестировщиков, а также ускоряет скорость поставки задачи (возврат в переработку, как правило, влечет за собой увеличение времени поставки).<br/>Стоит отметить, что могут быть \"технические возвраты\" задач, например из-за того, что у тестировщика проблемы с инфраструктурой - такие возвраты мы не считаем",
                     examples: "<b>Пример:</b> Тестировщики редко возвращают задачи разработчику из-за наличия багов. Им сразу понятно, как тестировать задачу и на что она влияет",
                     choices: [
                         {
@@ -381,7 +381,7 @@
                             value: 1
                         },
                         {
-                            choice: "Тестирует свою работу эффективно, возвращается тестировщиком не более 30% задач. ",
+                            choice: "Тестирует свою работу эффективно, возвращается тестировщиком не более 30% задач",
                             description: "",
                             value: 2
                         },
@@ -403,7 +403,7 @@
                 {
                     id: 10,
                     subject: "Архитектура сервисов",
-                    description: "На старте нового проекта разработчик закладывает архитектуру, которая долгое время позволяет гибко реагировать на запросы бизнеса.<br/>При поддержке существующего проекта происходит постепенное улучшение архитектуры через обычные задачи.",
+                    description: "На старте нового проекта разработчик закладывает архитектуру, которая долгое время позволяет гибко реагировать на запросы бизнеса.<br/>При поддержке существующего проекта происходит постепенное улучшение архитектуры через обычные задачи",
                     examples: "",
                     choices: [
                         {
@@ -449,7 +449,7 @@
                         },
                         {
                             choice: "Выделяет технические, продуктовые и бизнесовые метрики",
-                            description: "Настраивает по ним мониторинг и алертинг для контроля текущей работоспособности.",
+                            description: "Настраивает по ним мониторинг и алертинг для контроля текущей работоспособности",
                             value: 3
                         },
                         {
@@ -465,7 +465,7 @@
                 {
                     id: 12,
                     subject: "Техническое ревью",
-                    description: "Техническое ревью - эффективный способ проектирования технического решения. Чем лучше произведено проектирование, тем меньше проблем с сопровождение этой задачи в будущем.",
+                    description: "Техническое ревью - эффективный способ проектирования технического решения. Чем лучше произведено проектирование, тем меньше проблем с сопровождение этой задачи в будущем",
                     examples: "",
                     choices: [
                         {
@@ -496,7 +496,7 @@
                 {
                     id: 13,
                     subject: "Code review",
-                    description: "Качество Code Review позволяет на более ранней стадии выявить ошибки, синхронизироваться команде по части написания кода и перенять лучшие практики.",
+                    description: "Качество Code Review позволяет на более ранней стадии выявить ошибки, синхронизироваться команде по части написания кода и перенять лучшие практики",
                     examples: "",
                     choices: [
                         {
