--- a/developers.html
+++ b/developers.html
@@ -96,8 +96,7 @@
             </div>
 
             <div class="mt-5" v-show="lastAnsweredNumber === questionsCount">
-                <h4>По баллам: {{ estimatedGrade.name }}</h4>
-                <h4>С учетом ключевых пунктов: {{ realGrade.name }}</h4>
+                <h4>Грейд, с учетом ключевых <b>*</b> пунктов: {{ realGrade.name }}</h4>
                 <a href="https://skyeng.team/development" class="btn btn-success btn-lg">Посмотреть вакансии Skyeng</a>
 
                 <div style="margin-top: 20px">
